normalize all views through liquibase database independent refactoring. Remove irrelvant schemas.  normalize version numbers.

--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/location_attribute.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/location_attribute.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
-    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd">
+    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd"
+>
 
     <changeSet id="2.0.0" author="hhildebrand">
-        <sql><![CDATA[
-            CREATE OR REPLACE VIEW readable.location_attribute AS 
+        <createView viewName="location_attribute" schemaName="readable" replaceIfExists="true"><![CDATA[
 			 SELECT la.id, 
                     l.name AS location, 
                     a.name AS attribute,
@@ -20,11 +19,8 @@
 			   JOIN location l ON la.location = l.id
 			   JOIN attribute a ON la.attribute = a.id
 			   JOIN agency r ON la.updated_by = r.id;
-			
-			ALTER TABLE readable.location_attribute
-			  OWNER TO core;
             ]]>
-        </sql>
+        </createView>
         <rollback>
             <dropView viewName="readable.location" />
         </rollback>
