--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/location.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/location.xml
@@ -1,21 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
-    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd">
+    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd"
+>
 
     <changeSet id="2.0.0" author="hhildebrand">
-        <sql><![CDATA[
-            CREATE OR REPLACE VIEW readable.location AS 
+        <createView viewName="location" schemaName="readable" replaceIfExists="true"><![CDATA[
 			 SELECT l.id, l.name, l.description, l.notes, r.name AS updated_by, l.version
 			   FROM location l
-			   JOIN agency r ON l.updated_by = r.id;
-			
-			ALTER TABLE readable.location
-			  OWNER TO core;
+			   JOIN agency r ON l.updated_by = r.id; 
             ]]>
-        </sql>
+        </createView>
         <rollback>
             <dropView viewName="readable.location" />
         </rollback>
