--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/product.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/product.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
-    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd">
+    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd"
+>
 
     <changeSet id="2.0.0" author="hhildebrand">
-        <createView schemaName="readable" viewName="product"><![CDATA[
+        <createView schemaName="readable" viewName="product" replaceIfExists="true"><![CDATA[
 			 SELECT b.id, b.name, b.description, b.notes, up.name AS updated_by, b.version
 			   FROM product b
-			   JOIN agency up ON b.updated_by = up.id;
-			
-			ALTER TABLE readable.product
-			  OWNER TO core;
+			   JOIN agency up ON b.updated_by = up.id
             ]]>
         </createView>
         <rollback>
