--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_network_attribute.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_network_attribute.xml
@@ -6,8 +6,7 @@
 >
 
     <changeSet id="2.0.0" author="hhildebrand">
-        <sql><![CDATA[
-            CREATE OR REPLACE VIEW readable.product_network_attribute AS 
+        <createView viewName="product_network_attribute" schemaName="readable" replaceIfExists="true"><![CDATA[
 			 SELECT ba.id, 
                     b.id AS network_rule, 
                     a.name AS attribute, 
@@ -24,12 +23,9 @@
 			   JOIN product_network b ON ba.network_rule = b.id
 			   JOIN attribute a ON ba.attribute = a.id
 			   LEFT JOIN unit u ON ba.unit = u.id
-			   JOIN agency up ON ba.updated_by = up.id;
-			
-			ALTER TABLE readable.product_attribute
-			  OWNER TO core;
+			   JOIN agency up ON ba.updated_by = up.id
             ]]>
-        </sql>
+        </createView>
         <rollback>
             <dropView viewName="readable.product_attribute" />
         </rollback>
