--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_network_authorization.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_network_authorization.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
-    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd">
+<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
+    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd"
+>
 
-	<changeSet id="2.0.0" author="hparry">
-		<sql><![CDATA[
-		CREATE OR REPLACE VIEW readable.product_network_authorization AS 
+    <changeSet id="2.0.0" author="hparry">
+        <createView viewName="product_network_authorization" schemaName="readable" replaceIfExists="true"><![CDATA[
             SELECT 
 			    classification.name as classification,
 			    classifier.name as classifier,
@@ -20,14 +19,11 @@
 			    join ruleform.relationship classification on auth.classification = classification.id
 			    join ruleform.relationship bridge on auth.child_relationship = bridge.id
 			    join ruleform.product authorized_parent on auth.authorized_parent = authorized_parent.id
-			    join ruleform.relationship authorized_rel on auth.authorized_relationship = authorized_rel.id;
-            
-            ALTER TABLE readable.product_network_authorization
-              OWNER TO core;
+			    join ruleform.relationship authorized_rel on auth.authorized_relationship = authorized_rel.id
             ]]>
-		</sql>
-		<rollback>
-			<dropView viewName="readable.product_network_authorization" />
-		</rollback>
-	</changeSet>
+		</createView>
+        <rollback>
+            <dropView viewName="readable.product_network_authorization" />
+        </rollback>
+    </changeSet>
 </databaseChangeLog>
