--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/relationship.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/relationship.xml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
-    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd">
+    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd"
+>
 
     <changeSet id="2.0.0" author="hhildebrand">
-        <sql><![CDATA[
-            CREATE OR REPLACE VIEW readable.relationship AS 
+        <createView schemaName="readable" viewName="relationship" replaceIfExists="true"><![CDATA[  
 			 SELECT rel.id, rel.name, rel.description, inv.name AS inverse, rel.notes, up.name AS updated_by
 			   FROM relationship rel
 			   JOIN relationship inv ON rel.inverse = inv.id
-			   JOIN agency up ON rel.updated_by = up.id;
-			
-			ALTER TABLE readable.relationship
-			  OWNER TO core;
+			   JOIN agency up ON rel.updated_by = up.id
             ]]>
-        </sql>
+        </createView>
         <rollback>
             <dropView viewName="readable.relationship" />
         </rollback>
