--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/relationship_attribute_authorization.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/relationship_attribute_authorization.xml
@@ -6,7 +6,7 @@
 >
 
     <changeSet id="2.0.0" author="hhildebrand">
-        <createView schemaName="readable" viewName="relationship_attribute_authorization"><![CDATA[
+        <createView schemaName="readable" viewName="relationship_attribute_authorization" replaceIfExists="true"><![CDATA[
              SELECT     base_table.id ,
                 res.name AS grouping_agency, 
                 cls.name AS classification, 
@@ -26,13 +26,7 @@
              LEFT JOIN relationship b ON na.classifier = b.id
              LEFT JOIN attribute att ON base_table.authorized_attribute = att.id
              LEFT JOIN agency up ON base_table.updated_by = up.id
-             WHERE base_table.authorized_attribute IS NOT NULL;
-            
-            ALTER TABLE readable.relationship_attribute_authorization
-              OWNER TO core;
-            GRANT ALL ON TABLE readable.relationship_attribute_authorization TO core;
-            GRANT SELECT ON TABLE readable.relationship_attribute_authorization TO core_read_write;
-            GRANT SELECT ON TABLE readable.relationship_attribute_authorization TO core_read_only;
+             WHERE base_table.authorized_attribute IS NOT NULL
             ]]>
         </createView>
         <rollback>
