--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/relationship_network.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/relationship_network.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
-    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd">
+<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
+    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd"
+>
 
-	<changeSet id="2.0.0" author="hhildebrand">
-        <createView schemaName="readable" viewName="relationship_network"><![CDATA[
+    <changeSet id="2.0.0" author="hhildebrand">
+        <createView schemaName="readable" viewName="relationship_network" replaceIfExists="true"><![CDATA[
 			 SELECT n.id, 
                     p.name AS parent, 
                     rel.name AS relationship, 
@@ -28,8 +28,8 @@
 			  OWNER TO core;
             ]]>
 		</createView>
-		<rollback>
-			<dropView viewName="readable.relationship_network" />
-		</rollback>
-	</changeSet>
+        <rollback>
+            <dropView viewName="readable.relationship_network" />
+        </rollback>
+    </changeSet>
 </databaseChangeLog>
