--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/unit.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/unit.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog
-    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd">
+    http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-3.1.xsd"
+>
 
     <changeSet id="2.0.0" author="hhildebrand">
-        <sql><![CDATA[
-            CREATE OR REPLACE VIEW readable.unit AS 
+        <createView schemaName="readable" viewName="unit_attribute_authorization" replaceIfExists="true"><![CDATA[ 
 			 SELECT b.id, 
 			     b.name, 
                  b.description, 
@@ -20,12 +19,9 @@
 			     up.name AS updated_by,
 			     b.version
 			   FROM unit b
-			   JOIN agency up ON b.updated_by = up.id;
-			
-			ALTER TABLE readable.unit
-			  OWNER TO core;
+			   JOIN agency up ON b.updated_by = up.id
             ]]>
-        </sql>
+        </createView>
         <rollback>
             <dropView viewName="readable.unit" />
         </rollback>
