all tables have readable views except workspace auth, which is unreadable anyway ;)

--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/agency_network_attribute.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/agency_network_attribute.xml
@@ -27,7 +27,7 @@
             ]]>
         </createView>
         <rollback>
-            <dropView viewName="readable.agency_attribute" />
+            <dropView viewName="readable.agency_network_attribute" />
         </rollback>
     </changeSet>
 </databaseChangeLog>
