--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/unit.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/unit.xml
@@ -6,7 +6,7 @@
 >
 
     <changeSet id="2.0.0" author="hhildebrand">
-        <createView schemaName="readable" viewName="unit_attribute_authorization" replaceIfExists="true"><![CDATA[ 
+        <createView schemaName="readable" viewName="unit" replaceIfExists="true"><![CDATA[ 
 			 SELECT b.id, 
 			     b.name, 
                  b.description, 
