--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/unit_network.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/unit_network.xml
@@ -6,7 +6,7 @@
 >
 
     <changeSet id="2.0.0" author="hhildebrand">
-        <createView schemaName="readable" viewName="unit_attribute_authorization" replaceIfExists="true"><![CDATA[ 
+        <createView schemaName="readable" viewName="unit_network" replaceIfExists="true"><![CDATA[ 
 			 SELECT n.id, 
                     p.name AS parent, 
                     rel.name AS relationship, 
