--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/attribute_meta_attribute_authorization.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/attribute_meta_attribute_authorization.xml
@@ -9,8 +9,8 @@
         <createView viewName="attribute_meta_attribute_authorization" schemaName="readable" replaceIfExists="true"><![CDATA[
              SELECT     base_table.id ,
                 res.name AS grouping_agency, 
-                cls.name AS classification, 
-                b.name AS classifier, 
+                cls.name AS classifier, 
+                b.name AS classification, 
                 att.name AS authorized_attribute, 
                 base_table.sequence_number, 
                 base_table.text_value, 
@@ -22,8 +22,8 @@
              FROM attr_meta_attr_auth base_table
              LEFT JOIN attribute_network_authorization na ON base_table.network_authorization = na.id
              LEFT JOIN agency res ON base_table.grouping_agency = res.id
-             LEFT JOIN relationship cls ON na.classification = cls.id
-             LEFT JOIN attribute b ON na.classifier = b.id
+             LEFT JOIN relationship cls ON na.classifier = cls.id
+             LEFT JOIN attribute b ON na.classification = b.id
              LEFT JOIN attribute att ON base_table.authorized_attribute = att.id
              LEFT JOIN agency up ON base_table.updated_by = up.id
              WHERE base_table.authorized_attribute IS NOT NULL; 
