--- a/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_network_authorization.xml
+++ b/model/src/main/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_network_authorization.xml
@@ -8,15 +8,15 @@
     <changeSet id="2.0.0" author="hparry">
         <createView viewName="product_network_authorization" schemaName="readable" replaceIfExists="true"><![CDATA[
             SELECT 
-			    classification.name as classification,
 			    classifier.name as classifier,
+			    classification.name as classification,
 			    bridge.name as child_relationship,
 			    authorized_rel.name as auth_relationship,
 			    authorized_parent.name as auth_parent
 			    
 			    from ruleform.product_network_authorization auth
-			    join ruleform.product classifier on auth.classifier = classifier.id
-			    join ruleform.relationship classification on auth.classification = classification.id
+			    join ruleform.product classification on auth.classification = classification.id
+			    join ruleform.relationship classifier on auth.classifier = classifier.id
 			    join ruleform.relationship bridge on auth.child_relationship = bridge.id
 			    join ruleform.product authorized_parent on auth.authorized_parent = authorized_parent.id
 			    join ruleform.relationship authorized_rel on auth.authorized_relationship = authorized_rel.id
