--- a/phantasm-at-rest/src/test/resources/assets/partials/all-facets.html
+++ b/phantasm-at-rest/src/test/resources/assets/partials/all-facets.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-	<ul class="facet-instances">
-		<li ng-repeat="facetInstance in facetInstances"><a
+	<ul class="facets">
+		<li ng-repeat="facet in facets"><a
 			href="#{{facet.allInstances}}">{{facet.typeName}}</a></li>
 	</ul>
 </div>
