--- a/phantasm-at-rest/src/test/resources/assets/partials/facet-ruleforms.html
+++ b/phantasm-at-rest/src/test/resources/assets/partials/facet-ruleforms.html
@@ -1,25 +1,6 @@
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-2">
-      <!--Sidebar content-->
-
-      Search: <input ng-model="query">
-      Sort by:
-      <select ng-model="orderProp">
-        <option value="name">Alphabetical</option>
-        <option value="age">Newest</option>
-      </select>
-
-    </div>
-    <div class="col-md-10">
-      <!--Body content-->
-
-      <ul class="facetRuleforms">
-        <li ng-repeat="(name, allInstancesUrl) in facetRuleforms" >
-          <a href="#{{allInstancesUrl}}">{{name}}</a>
-        </li>
-      </ul>
-
-    </div>
-  </div>
+	<ul class="facetRuleforms">
+		<li ng-repeat="(name, allInstancesUrl) in facetRuleforms"><a
+			href="#{{allInstancesUrl}}">{{name}}</a></li>
+	</ul>
 </div>
