--- a/phantasm-at-rest/src/test/resources/assets/partials/facet-instances.html
+++ b/phantasm-at-rest/src/test/resources/assets/partials/facet-instances.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<ul class="facet-instances">
 		<li ng-repeat="facetInstance in facetInstances"><a
-			href="#{{facet.allInstances}}">{{facet.typeName}}</a></li>
+			href="#{{facetInstance['@id']}}">{{facetInstance['@type']}}</a></li>
 	</ul>
 </div>
