fix style sheets, use light/light for json tree

--- a/phantasm-at-rest/src/test/resources/assets/partials/facet-instance-detail.html
+++ b/phantasm-at-rest/src/test/resources/assets/partials/facet-instance-detail.html
@@ -1,5 +1,7 @@
 <div class="container-fluid">
-    <ul class="facet-instance-detail">
-        <json-formatter open="1" json="facetInstance"></json-formatter>
-    </ul>
+	<ul class="facet-instance-detail">
+		<div class="result light">
+			<json-formatter open="2" json="facetInstance" class="json-formatter-light"></json-formatter>
+		</div>
+	</ul>
 </div>
