fix collection resource paths.  ugh.  better relativizing. ultrastructure browser now much, much cleaner.

--- a/phantasm-at-rest/src/test/resources/assets/partials/facet-ruleforms.html
+++ b/phantasm-at-rest/src/test/resources/assets/partials/facet-ruleforms.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<ul class="facetRuleforms">
-		<li ng-repeat="(name, allInstancesUrl) in facetRuleforms"><a
-			href="#{{allInstancesUrl}}">{{name}}</a></li>
+		<li ng-repeat="ruleform in facetRuleforms"><a
+			href="#/facet/{{ruleform}}">{{ruleform}}</a></li>
 	</ul>
 </div>
