--- a/phantasm-at-rest/src/test/resources/assets/partials/facets.html
+++ b/phantasm-at-rest/src/test/resources/assets/partials/facets.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 	<ul class="facets">
 		<li ng-repeat="facet in facets"><a
-			href="#/facet/{{facet.allInstances}}">{{facet["@typeName"]}}</a></li>
+			href="#/facet/{{facet.instances}}">{{facet["@typeName"]}}</a></li>
 	</ul>
 </div>
