capability check on facet's authorized attribute is now working and tested.
Fuck yea.

--- a/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_attribute_authorization.xml
+++ b/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/product_attribute_authorization.xml
@@ -12,6 +12,7 @@
                 cls.name AS classifier, 
                 b.name AS classification, 
                 att.name AS authorized_attribute, 
+                natt.name AS authorized_network_attribute, 
                 base_table.sequence_number, 
                 base_table.text_value, 
                 base_table.integer_value, 
@@ -25,8 +26,8 @@
              LEFT JOIN relationship cls ON na.classifier = cls.id
              LEFT JOIN product b ON na.classification = b.id
              LEFT JOIN attribute att ON base_table.authorized_attribute = att.id
+             LEFT JOIN attribute natt ON base_table.authorized_network_attribute = natt.id
              LEFT JOIN agency up ON base_table.updated_by = up.id
-             WHERE base_table.authorized_attribute IS NOT NULL
             ]]>
         </createView>
         <rollback>
