--- a/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/attribute_network_authorization.xml
+++ b/model/sql/com/chiralbehaviors/CoRE/schema/readable/views/attribute_network_authorization.xml
@@ -12,14 +12,16 @@
                 classification.name as classification,
                 bridge.name as child_relationship,
                 authorized_rel.name as auth_relationship,
-                authorized_parent.name as auth_parent
+                authorized_parent.name as auth_parent,
+                res.name as grouping_agency
                 
                 from ruleform.attribute_network_authorization auth
                 join ruleform.attribute classification on auth.classification = classification.id
                 join ruleform.relationship classifier on auth.classifier = classifier.id
-                join ruleform.relationship bridge on auth.child_relationship = bridge.id
-                join ruleform.attribute authorized_parent on auth.authorized_parent = authorized_parent.id
-                join ruleform.relationship authorized_rel on auth.authorized_relationship = authorized_rel.id;
+                left join ruleform.relationship bridge on auth.child_relationship = bridge.id
+                left join ruleform.attribute authorized_parent on auth.authorized_parent = authorized_parent.id
+                left join ruleform.relationship authorized_rel on auth.authorized_relationship = authorized_rel.id
+                left join ruleform.agency res on auth.grouping_agency = res.id
             ]]>
         </createView>
         <rollback>
